# Priority

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/resources/: style.css
data/resources/ui/: window.ui
src/: application.rs  config.rs  main.rs  utils.rs  window.rs
src/widgets/: board.rs  card.rs  card_list.rs  main_stack.rs  mod.rs  window_headerbar.rs
