[package]
name = "priority"
version = "0.1.0"
authors = ["Jeriel <jeriel.verissimo@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.8.1"
glib = "0.9.3"
gdk = "0.12.1"

[dependencies.gtk]
version = "0.8.1"
feature = ["v3_22"] 
